# PlanA

./: README.md  calculate_pc_range.py  kitti_3d_dimensions_stats.py  pointcloud_statistics.py
PointAugmenting/: MANIFEST.in  hello.py  pyproject.toml  requirements.txt  setup.cfg
PointAugmenting/configs/kitti/voxelnet/: kitti_voxelnet.py
PointAugmenting/det3d/core/bbox/: geometry.py
PointAugmenting/det3d/core/sampler/: sample_ops.py
PointAugmenting/det3d/core/utils/: center_utils.py
PointAugmenting/det3d/datasets/: __init__.py  dataset_factory.py  kitti.py  kitti_dataset.py
PointAugmenting/det3d/datasets/kitti/: __init__.py  kitti_common.py
PointAugmenting/det3d/datasets/pipelines/: loading.py  preprocess.py
PointAugmenting/det3d/datasets/utils/: create_gt_database.py
PointAugmenting/det3d/models/backbones/: scn.py
PointAugmenting/det3d/models/bbox_heads/: center_head.py
PointAugmenting/det3d/models/detectors/: voxelnet_fusion.py
PointAugmenting/det3d/models/img_backbones/: dla.py
PointAugmenting/det3d/models/losses/: centernet_loss.py
PointAugmenting/det3d/models/necks/: rpn.py
PointAugmenting/det3d/models/readers/: voxel_encoder.py
PointAugmenting/det3d/ops/dcn/src/: deform_conv_cuda.cpp
PointAugmenting/det3d/torchie/apis/: train.py
PointAugmenting/det3d/torchie/trainer/: trainer.py
PointAugmenting/pointaugmenting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PointAugmenting/tools/: clean_dbinfos.py  create_data.py  dist_test.py  export_kitti_label2.py
