[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointaugmenting"
version = "0.0.1"
description = "PointAugmenting 3D detection framework"
readme = "README.md"
authors = [{ name = "PointAugmenting authors" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
all = []

[tool.setuptools]
packages = { find = { where = ["."], include = ["det3d*", "tools*"], exclude = ["data*", "docs*", "configs*", "pretrained_model*", "pointaugmenting.egg-info*"] } }

[tool.setuptools.package-data]
"det3d" = ["**/*.cu", "**/*.cpp", "**/*.h", "**/*.json"]
