[metadata]
name = pointaugmenting
version = 0.0.1
description = PointAugmenting 3D detection framework
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    torch
    torchvision

[options.packages.find]
where = .
include =
    det3d*

[options.package_data]
det3d = **/*.cu, **/*.cpp, **/*.h, **/*.json
